apps/garagedoor/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: garagedoor
  namespace: garagedoor
  labels:
    app: garagedoor
spec:
  type: ClusterIP
  selector:
    app: garagedoor
    app.kubernetes.io/name: garagedoor
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
